Class added for preventing flicker onLoad that will be removed by JS when required

--- a/assets/sass/elements/_helpers.scss
+++ b/assets/sass/elements/_helpers.scss
@@ -24,3 +24,9 @@
   display: none;
 }
 
+
+// Prevent flicker (DEFRA request)
+.js-cloak {
+  display: !important;  
+}
+
